fix - add align in footer

--- a/css/style.css
+++ b/css/style.css
@@ -624,8 +624,8 @@ pre, code {
 
 footer {
   font-size: 12px;
-  margin: 60px 5% 30px;
-  max-width: 1090px;
+  margin: 60px auto 30px;
+  max-width: 64rem;
   display: flex;
   gap: 24px;
   flex-direction: column;
